--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JENNIE</title>
+    <title>NITU</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main">
         <div id="navbar">
             <img src="smile 01.svg">
-            <h5>JENNIE</h5>
+            <h5>NITU</h5>
         </div>
         <div id="part1"></div>
         <div id="part2">
